Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/good/JSONEncoder.java
package org.example.OCP.good;

public class JSONEncoder implements DataEncoder {
    @Override
    public String encode(String data) {
        return null;
    }
}
