Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/bad/DataEncoder.java
package org.example.OCP.bad;

public class DataEncoder {
    public String encode(String data) {
        return null;
    }
}
